update tech